# OptionsConfig

./: .gitignore  INSTALL_TEST.md  LICENSE  QUICK_REFERENCE.md  README.md  SCHEMA.md  SCHEMA_LOADING.md  USAGE_GUIDE.md  pyproject.toml
.github/workflows/: tests.yml
example/: README.md  build_docs.py  expected_.env.example  expected_README.md  options_schema.py  run.py
examples/: expected_.env.example  expected_README.md
examples/direct-pass/: .env  DIRECT_PASS.md  README.md  build_docs.py  expected_.env.example  options_schema.py  run.py
examples/toml/: .env  TOML.md  build_docs.py  options_schema.py  pyproject.toml  run.py
src/doc_builders/: env_example.py  readme_options.py
src/optionsconfig/: __init__.py  argument_writer.py  cli.py  core.py  options.py  schema.py
src/optionsconfig/builders/: __init__.py  build_all.py  build_docs.py  env_builder.py  readme_builder.py  readme_options.py  update_readme.py
tests/argument_writer/: README.md  argument_writer_schema.py  pyproject.toml  test_argument_writer.py
tests/builders/: TEST_README.md  test_both_README.md  test_both_builders.py  test_build_all.py  test_env_builder.py  test_readme_builder.py
tests/builders/env_builder/: __init__.py  env.example  pyproject.toml  test_env_builder.py
tests/core/: test_core.py  test_options.py
tests/core/options/: test_options.py
tests/examples/: __init__.py  test_direct_pass.py  test_toml.py
tests/options/: README.md  __init__.py  options_test_schema.py  pyproject.toml  test_options.py
tests/schema/: README.md  pyproject.toml  sample_schema.py  test_schema.py
(+11 files in other folders)
