[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optionsconfig"
version = "0.1.0"
description = "Unified configuration management for environment variables, CLI arguments, and documentation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "python-dotenv>=0.19.0",
    "loguru>=0.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "mypy>=0.950",
]
toml = [
    "tomli>=2.0.0; python_version < '3.11'",
]

[tool.optionsconfig]
# Configuration for this repository's own OPTIONS_SCHEMA
# Users of this package would set their own schema module here
schema_module = "src.options_schema"

[project.urls]
Homepage = "https://github.com/yourusername/OptionsConfig"
Repository = "https://github.com/yourusername/OptionsConfig"
